[package]
edition = "2024"
license = "LGPL-3.0-or-later"
name = "rime-install"
version = "0.1.1"

[[bin]]
name = "rime-install"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.102"
clap = {version = "4.6.0", features = ["derive", "env"]}
dirs-next = "2"
git2 = "0.20.4"
glob = "0.3.3"
serde = {version = "1", features = ["derive"]}
serde_yaml = "=0.9.34-deprecated"
thiserror = "2.0.18"
ureq = "3.3.0"
